fixed bg and overflow issue of bg

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    background: url('./bg.png');
-}
-
 .calendly-inline-widget {
     padding: 0 !important;
     margin: 0 !important;
